Set an empty patch command for external projects when there are no patches

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ function(ExternalProject_PatchSet TARGET_NAME RESULT)
         endif()
         set(${RESULT} ${${RESULT}} ${PATCH_EXECUTABLE} -p1 < ${_PATCH})
     endforeach()
+    if(NOT ${RESULT})
+        set(${RESULT} PATCH_COMMAND "")
+    endif()
     set(${RESULT} ${${RESULT}} PARENT_SCOPE)
 endfunction()
 
