Don't install AmbDec presets for OpenAL-soft dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -476,6 +476,7 @@ if(NOT APPLE)
             -DALSOFT_CONFIG=OFF
             -DALSOFT_TESTS=OFF
             -DALSOFT_HRTF_DEFS=OFF
+            -DALSOFT_AMBDEC_PRESETS=OFF
             -DALSOFT_REQUIRE_MMDEVAPI=${WIN32}
             -DALSOFT_REQUIRE_COREAUDIO=${APPLE}
             -DALSOFT_CPUEXT_NEON=OFF
