--- a/.travis.yml
+++ b/.travis.yml
@@ -64,7 +64,7 @@ deploy:
   # Undocumented flag to create a draft release
   draft: true
   file_glob: true
-  file: FreeOrionSDK_*.dmg
+  file: FreeOrionSDK_*.tar.bz2
   skip_cleanup: true
   on:
     tags: true
