--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,5 +1,7 @@
 os: Visual Studio 2017
+
 version: ci-{build}
+
 environment:
   matrix:
    - TOOlSET: v140_xp
@@ -19,7 +21,7 @@ before_build:
   - cd build
 build_script:
   - cmake -G "%GENERATOR%" -T %TOOLSET% ..
-  - cmake --build . --config RelWithDebInfo -- /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal
+  - cmake --build . --config RelWithDebInfo -- /maxcpucount /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" /verbosity:minimal
 test: off
 artifacts:
   - name: FreeOrionSDK_Package
