Add support to build boost with Win64 MSVS generators.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -549,8 +549,12 @@ else()
     set(_VS_PLATFORM_TOOLSET_VERSION "${_VS_PLATFORM_TOOLSET_VERSION}.0")
     set(BOOST_CONFIGURE_FLAGS
         debug-store=database
-        address-model=32
     )
+    if(CMAKE_CL_64)
+        list(APPEND BOOST_CONFIGURE_FLAGS address-model=64)
+    else()
+        list(APPEND BOOST_CONFIGURE_FLAGS address-model=32)
+    endif()
     if("${_VS_PLATFORM_TOOLSET_TARGET}" STREQUAL "_xp")
         list(APPEND BOOST_CONFIGURE_FLAGS define=BOOST_USE_WINAPI_VERSION=BOOST_WINAPI_VERSION_WINXP)
     endif()
