Use `MSVC_TOOLSET_VERSION` within VS CMake integration
The implementation of CMake within Visual Studio 2017 doesn't seem to
set the `CMAKE_VS_PLATFORM_TOOLSET` variable, which is fed by the `-T`
parameter of the `cmake` executable.  Instead it exposes the
`MSVC_TOOLSET_VERSION` variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -543,7 +543,12 @@ if(NOT WIN32)
     get_filename_component(BOOST_OSX_SYSROOT "${BOOST_OSX_SYSROOT}" DIRECTORY)
 else()
     set(BOOST_CONFIGURE_COMMAND <SOURCE_DIR>/bootstrap.bat)
-    string(REGEX REPLACE "^v([1-9][0-9]*)(.*)$" "\\1;\\2" _VS_PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
+    if(CMAKE_VS_PLATFORM_TOOLSET)
+        string(REGEX REPLACE "^v([1-9][0-9]*)(.*)$" "\\1;\\2" _VS_PLATFORM_TOOLSET "${CMAKE_VS_PLATFORM_TOOLSET}")
+    else()
+        string(REGEX REPLACE "^([1-9][0-9]*)(.*)$" "\\1;\\2" _VS_PLATFORM_TOOLSET "${MSVC_TOOLSET_VERSION}")
+    endif()
+
     list(GET _VS_PLATFORM_TOOLSET 0 _VS_PLATFORM_TOOLSET_VERSION)
     list(GET _VS_PLATFORM_TOOLSET 1 _VS_PLATFORM_TOOLSET_TARGET)
     math(EXPR _VS_PLATFORM_TOOLSET_VERSION "${_VS_PLATFORM_TOOLSET_VERSION}/10")
