Invoke patch.exe with `--binary` flag
When invoking the WinGNU patch executable within the embedded Visual
Studio CMake build it seems like it cannot handle patch files with LF
only line ending.  To circumvent this execute `patch.exe` with the
`--binary` command line flag.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,7 +93,7 @@ if(WIN32)
             <SOURCE_DIR>/bin/patch.exe
             ${SDK_BINARY_DIR}/patch.exe
     )
-    set(PATCH_EXECUTABLE ${SDK_BINARY_DIR}/patch.exe)
+    set(PATCH_EXECUTABLE ${SDK_BINARY_DIR}/patch.exe --binary)
 else()
     add_custom_target(patch)
     find_program(PATCH_EXECUTABLE patch)
