--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -550,13 +550,15 @@ else()
     set(BOOST_CONFIGURE_FLAGS
         debug-store=database
     )
-    if(CMAKE_CL_64)
+    if(CMAKE_SIZEOF_VOID_P EQUAL 8)
         list(APPEND BOOST_CONFIGURE_FLAGS address-model=64)
     else()
         list(APPEND BOOST_CONFIGURE_FLAGS address-model=32)
     endif()
     if("${_VS_PLATFORM_TOOLSET_TARGET}" STREQUAL "_xp")
         list(APPEND BOOST_CONFIGURE_FLAGS define=BOOST_USE_WINAPI_VERSION=BOOST_WINAPI_VERSION_WINXP)
+    else()
+        list(APPEND BOOST_CONFIGURE_FLAGS define=BOOST_USE_WINAPI_VERSION=BOOST_WINAPI_VERSION_VISTA)
     endif()
     set(BOOST_TOOLSET msvc-${_VS_PLATFORM_TOOLSET_VERSION})
     set(BOOST_OSX_SYSROOT "")
