Update python3 to 3.5.7. Fix boost python2 compilation.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -679,6 +679,7 @@ else()
     set(BOOST_OSX_SYSROOT "")
 endif()
 string(SUBSTRING "${PYTHON_VERSION}" 0 3 PYTHON_VERSION)
+string(SUBSTRING "${PYTHON3_VERSION}" 0 3 PYTHON3_VERSION)
 
 if(BUILD_SHARED_LIBS OR APPLE)
     set(BOOST_LINK "shared")
