Try to fix multiple python build.
See https://github.com/boostorg/python/issues/262

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -603,6 +603,7 @@ ExternalProject_Add(boost
         -j${BOOST_PARALLEL_JOBS}
         -d
         --layout=system
+        --no-cmake-config
         --debug-configuration
         --abbreviate-paths
         --user-config=${CMAKE_BINARY_DIR}/boost-config.jam
