Enforce shared libs for SDL2 MacOS framework

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -473,10 +473,13 @@ ExternalProject_Add(freetype
 list(APPEND DIST_PACK_TARGETS freetype)
 
 if(WIN32)
-    set(SDL_CONFIGURE_FLAGS "")
+    set(SDL_CONFIGURE_FLAGS
+        -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
+    )
     set(SDL_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 else()
     set(SDL_CONFIGURE_FLAGS
+        -DBUILD_SHARED_LIBS=ON
         -DBUILD_FRAMEWORK=ON
     )
     set(SDL_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR}/Frameworks)
@@ -491,7 +494,6 @@ ExternalProject_Add(sdl
     ${SDL_PATCHSET}
     CMAKE_ARGS
         -DCMAKE_INSTALL_PREFIX=<INSTALL_DIR>
-        -DBUILD_SHARED_LIBS=${BUILD_SHARED_LIBS}
         -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
         -DCMAKE_VERBOSE_MAKEFILE=${CMAKE_VERBOSE_MAKEFILE}
         -DCMAKE_OSX_DEPLOYMENT_TARGET=${CMAKE_OSX_DEPLOYMENT_TARGET}
