--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,8 @@ jobs:
       env:
         - RELEASES_FILE=FreeOrionSDK_*.zip
         - RELEASES_TAG_NAME=$TRAVIS_TAG
+      before_install:
+        - choco uninstall mingw
       script:
         - cmake -G "Visual Studio 15" -T v141 -A Win32 ..
         - travis_wait 70 cmake --build . --config RelWithDebInfo -- //maxcpucount //property:BuildInParallel=true //property:CL_MPCount=2 //verbosity:minimal
@@ -77,6 +79,8 @@ jobs:
       env:
         - RELEASES_FILE=FreeOrionSDK_*.zip
         - RELEASES_TAG_NAME=$TRAVIS_TAG
+      before_install:
+        - choco uninstall mingw
       script:
         - cmake -G "Visual Studio 15" -T v141 -A x64 ..
         - travis_wait 70 cmake --build . --config RelWithDebInfo -- //maxcpucount //property:BuildInParallel=true //property:CL_MPCount=2 //verbosity:minimal
