--- a/.travis.yml
+++ b/.travis.yml
@@ -67,6 +67,10 @@ jobs:
       env:
         - RELEASES_FILE=FreeOrionSDK_*.zip
         - RELEASES_TAG_NAME=$TRAVIS_TAG
+        - CC=cl.exe
+        - CXX=cl.exe
+        - CC_FOR_BUILD=cl.exe
+        - CXX_FOR_BUILD=cl.exe
       script:
         - cmake -G "Visual Studio 15" -T v141 -A Win32 ..
         - travis_wait 70 cmake --build . --config RelWithDebInfo -- //maxcpucount //property:BuildInParallel=true //property:CL_MPCount=2 //verbosity:minimal
@@ -77,6 +81,10 @@ jobs:
       env:
         - RELEASES_FILE=FreeOrionSDK_*.zip
         - RELEASES_TAG_NAME=$TRAVIS_TAG
+        - CC=cl.exe
+        - CXX=cl.exe
+        - CC_FOR_BUILD=cl.exe
+        - CXX_FOR_BUILD=cl.exe
       script:
         - cmake -G "Visual Studio 15" -T v141 -A x64 ..
         - travis_wait 70 cmake --build . --config RelWithDebInfo -- //maxcpucount //property:BuildInParallel=true //property:CL_MPCount=2 //verbosity:minimal
