--- a/.github/workflows/android-macos-python.yml
+++ b/.github/workflows/android-macos-python.yml
@@ -33,6 +33,8 @@ jobs:
     - name: create directories
       run: |
         mkdir -p build-python/python-cmake-buildsystem
+        mkdir -p build-boost/Boost-for-Android
+        mkdir -p build-godot
 
     - uses: actions/cache@v2
       id: avd-cache
@@ -95,7 +97,8 @@ jobs:
           mkdir ../python-build
           mkdir ../python-install-prefix
           cd ../python-build
-          /Users/runner/Library/Android/sdk/cmake/3.10.2.4988404/bin/cmake -DCMAKE_INSTALL_PREFIX:PATH=../python-install-prefix -DCMAKE_TOOLCHAIN_FILE=/Users/runner/Library/Android/sdk/ndk-bundle/build/cmake/android.toolchain.cmake -DANDROID_ABI=${{ matrix.ndk-arch }} -DCMAKE_CROSSCOMPILING_EMULATOR=/Users/runner/work/freeorion-sdk/freeorion-sdk/.github/workflows/adb-emu.sh -DANDROID_ALLOW_UNDEFINED_SYMBOLS=On -DENABLE_DECIMAL=Off -DENABLE_CTYPES=Off -DENABLE_CODECS_JP=OFF -DENABLE_CODECS_KR=OFF -DENABLE_CODECS_TW=OFF -DENABLE_MULTIBYTECODEC=OFF -DENABLE_CODECS_CN=OFF -DENABLE_CODECS_HK=OFF -DENABLE_CODECS_ISO2022=OFF -DBUILD_EXTENSIONS_AS_BUILTIN=On -DANDROID_PLATFORM=android-21 ../python-cmake-buildsystem/
+          # ls -lR /Users/runner/Library/Android/sdk/ndk/23.0.7421159/
+          /Users/runner/Library/Android/sdk/cmake/3.10.2.4988404/bin/cmake -DANDROID_NDK=/Users/runner/Library/Android/sdk/ndk/23.0.7421159/ -DCMAKE_INSTALL_PREFIX:PATH=../python-install-prefix -DCMAKE_TOOLCHAIN_FILE=/Users/runner/Library/Android/sdk/ndk/23.0.7421159/build/cmake/android.toolchain.cmake -DANDROID_ABI=${{ matrix.ndk-arch }} -DCMAKE_CROSSCOMPILING_EMULATOR=/Users/runner/work/freeorion-sdk/freeorion-sdk/.github/workflows/adb-emu.sh -DANDROID_ALLOW_UNDEFINED_SYMBOLS=On -DENABLE_DECIMAL=Off -DENABLE_CTYPES=Off -DENABLE_CODECS_JP=OFF -DENABLE_CODECS_KR=OFF -DENABLE_CODECS_TW=OFF -DENABLE_MULTIBYTECODEC=OFF -DENABLE_CODECS_CN=OFF -DENABLE_CODECS_HK=OFF -DENABLE_CODECS_ISO2022=OFF -DBUILD_EXTENSIONS_AS_BUILTIN=On -DANDROID_PLATFORM=android-21 ../python-cmake-buildsystem/
           /Users/runner/Library/Android/sdk/cmake/3.10.2.4988404/bin/cmake --build . -- VERBOSE=1
           /Users/runner/Library/Android/sdk/cmake/3.10.2.4988404/bin/cmake --build . --target install
 
@@ -108,10 +111,33 @@ jobs:
         zip -r -9 -q ../python-3.6-sdk-${{ matrix.ndk-arch }}.zip include/ lib/libpython3.6m.a
         cd ..
 
+    - uses: actions/checkout@v2
+      with:
+        repository: 'moritz-wundke/Boost-for-Android'
+        ref: 'master'
+        path: 'build-boost/Boost-for-Android'
+
+    - name: Build Boost
+      shell: bash
+      run: |
+        export PYTHON_PATH=$(cd build-python/python-install-prefix/ ; pwd)
+        cd build-boost/Boost-for-Android
+        CXXFLAGS="-std=c++14" ./build-android.sh --boost=1.76.0 --arch=${{ matrix.ndk-arch }} --with-iconv --with-python=${PYTHON_PATH} --layout=system /Users/runner/Library/Android/sdk/ndk/23.0.7421159/
+
+    - name: Pack Boost
+      shell: bash
+      run: |
+        pushd build-boost/Boost-for-Android/build/out/${{ matrix.ndk-arch }}/
+        zip -r -9 -q ../../../../boost-1.76.0-sdk-${{ matrix.ndk-arch }}.zip include/ lib/
+        popd
+        pushd build-boost/Boost-for-Android/libiconv-libicu-android/${{ matrix.ndk-arch }}/
+        zip -r -9 -q ../../../libiconv-libicu-sdk-${{ matrix.ndk-arch }}.zip lib/libicui18n.a lib/libicuuc.a lib/libicudata.a lib/libiconv.so
+
     - uses: actions/upload-artifact@v2
       with:
         name: python SDK
         path: |
           build-python/python36.zip
           build-python/python-3.6-sdk-${{ matrix.ndk-arch }}.zip
-
+          build-boost/boost-1.76.0-sdk-${{ matrix.ndk-arch }}.zip
+          build-boost/libiconv-libicu-sdk-${{ matrix.ndk-arch }}.zip
