Add matrix for different builds

--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -6,19 +6,38 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-2019
+    name: ${{ matrix.toolset }}-${{ matrix.arch }} on ${{ matrix.msvs }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        arch: [x64]
+        toolset: [v142]
+        msvs: ['Visual Studio 16 2019']
+        vs-versions: ['[16.0,16.30)']
+        os: [windows-2019]
+        include:
+          - arch: Win32
+            toolset: v141
+            msvs: 'Visual Studio 16 2019'
+            vs-versions: '[16.0,16.30)'
+            os: windows-2019
+              #- arch: x64
+              #toolset: v143
+              #msvs: 'Visual Studio 17 2022'
+              #vs-versions: '[17.0,17.30)'
+              #os: windows-2022
     steps:
       - name: Checkout sources
         uses: actions/checkout@v3
       - name: Add msbuild to PATH
         uses: microsoft/setup-msbuild@v1.0.2
         with:
-          vs-version: '[16.0,16.30)'
+          vs-version: ${{ matrix.vs-versions }}
       - name: Configure
         run: |
           mkdir build
           cd build
-          cmake -G "Visual Studio 16 2019" -T v141 -A Win32 ..
+          cmake -G "${{ matrix.msvs }}" -T ${{ matrix.toolset }} -A ${{ matrix.arch }} ..
       - name: Build
         run: |
           cd build
@@ -28,6 +47,6 @@ jobs:
         with:
           name: Windows SDK
           path: |
-            build/FreeOrionSDK_12_MSVC-v141-Win32.zip
+            build/FreeOrionSDK_*_MSVC-${{ matrix.toolset }}-${{ matrix.arch }}.zip
 
 
