--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -270,6 +270,7 @@ ExternalProject_Add(python3
         -DENABLE_CODECS_TW=OFF
         #DENABLE_CRYPT=OFF
         -DENABLE_CSV=OFF
+        -DENABLE_CTYPES=OFF
         -DENABLE_CTYPES_TEST=OFF
         -DENABLE_CURSES=OFF
         -DENABLE_CURSES_PANEL=OFF
