Add dependencies to PATH

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,8 @@
-set(REQUIRED_CMAKE_VERSION 3.7)
+if(WIN32)
+    set(REQUIRED_CMAKE_VERSION 3.10)
+else()
+    set(REQUIRED_CMAKE_VERSION 3.7)
+endif()
 
 cmake_minimum_required(VERSION ${REQUIRED_CMAKE_VERSION})
 
@@ -219,6 +223,7 @@ unset(SOURCE_DIR)
 if(WIN32)
     set(PYTHON3_CONFIGURE_FLAGS
         -DBUILD_EXTENSIONS_AS_BUILTIN=ON
+        -DCMAKE_MSVCIDE_RUN_PATH=${SDK_INSTALL_DIR}/bin/
     )
     set(PYTHON3_CONFIGURE_INSTALL_DIR ${SDK_INSTALL_DIR})
 else()
